--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,72 @@
 ################################################################################
 
 /IntegrationTests/obj/x86/Release/XamlTypeInfo.g.cs
+/IntegrationTests/obj/x86/Release/XamlSaveStateFile.xml
+/IntegrationTests/obj/x86/Release/UnitTestApp.g.i.cs
+/IntegrationTests/obj/x86/Release/UnitTestApp.g.cs
+/IntegrationTests/obj/x86/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/IntegrationTests/obj/x86/Debug/XamlTypeInfo.g.cs
+/IntegrationTests/obj/x86/Debug/XamlSaveStateFile.xml
+/IntegrationTests/obj/x86/Debug/UnitTestApp.g.i.cs
+/IntegrationTests/obj/x86/Debug/UnitTestApp.g.cs
+/IntegrationTests/obj/x86/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/IntegrationTests/obj/x64/Release/XamlTypeInfo.g.cs
+/IntegrationTests/obj/x64/Release/XamlSaveStateFile.xml
+/IntegrationTests/obj/x64/Release/UnitTestApp.g.i.cs
+/IntegrationTests/obj/x64/Release/UnitTestApp.g.cs
+/IntegrationTests/obj/x64/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/IntegrationTests/obj/x64/Debug/XamlTypeInfo.g.cs
+/IntegrationTests/obj/x64/Debug/XamlSaveStateFile.xml
+/IntegrationTests/obj/x64/Debug/UnitTestApp.g.i.cs
+/IntegrationTests/obj/x64/Debug/UnitTestApp.g.cs
+/IntegrationTests/obj/x64/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/IntegrationTests/obj/ARM64/Release/XamlTypeInfo.g.cs
+/IntegrationTests/obj/ARM64/Release/XamlSaveStateFile.xml
+/IntegrationTests/obj/ARM64/Release/UnitTestApp.g.i.cs
+/IntegrationTests/obj/ARM64/Release/UnitTestApp.g.cs
+/IntegrationTests/obj/ARM64/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/IntegrationTests/obj/ARM64/Debug/XamlTypeInfo.g.cs
+/IntegrationTests/obj/ARM64/Debug/XamlSaveStateFile.xml
+/IntegrationTests/obj/ARM64/Debug/UnitTestApp.g.i.cs
+/IntegrationTests/obj/ARM64/Debug/UnitTestApp.g.cs
+/IntegrationTests/obj/ARM64/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/IntegrationTests/obj/ARM/Release/XamlTypeInfo.g.cs
+/IntegrationTests/obj/ARM/Release/XamlSaveStateFile.xml
+/IntegrationTests/obj/ARM/Release/UnitTestApp.g.i.cs
+/IntegrationTests/obj/ARM/Release/UnitTestApp.g.cs
+/IntegrationTests/obj/ARM/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/IntegrationTests/obj/ARM/Debug/XamlTypeInfo.g.cs
+/IntegrationTests/obj/ARM/Debug/XamlSaveStateFile.xml
+/IntegrationTests/obj/ARM/Debug/UnitTestApp.g.i.cs
+/IntegrationTests/obj/ARM/Debug/UnitTestApp.g.cs
+/IntegrationTests/obj/ARM/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyStreamingPlus/obj/x86/Release/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/x86/Release/View/App.g.cs
+/DisneyStreamingPlus/obj/x86/Debug/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/x86/Debug/View/App.g.cs
+/DisneyStreamingPlus/obj/x64/Release/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/x64/Release/View/App.g.cs
+/DisneyStreamingPlus/obj/x64/Debug/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/x64/Debug/View/App.g.cs
+/DisneyStreamingPlus/obj/ARM64/Release/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/ARM64/Release/View/App.g.cs
+/DisneyStreamingPlus/obj/ARM64/Debug/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/ARM64/Debug/View/App.g.cs
+/DisneyStreamingPlus/obj/ARM/Release/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/ARM/Release/View/App.g.cs
+/DisneyStreamingPlus/obj/ARM/Debug/View/MainPage.g.cs
+/DisneyStreamingPlus/obj/ARM/Debug/View/App.g.cs
+/DisneyHomePageApi/obj/x86/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/x86/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/x64/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/x64/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/ARM64/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/ARM64/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/ARM/Release/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/DisneyHomePageApi/obj/ARM/Debug/.NETCore,Version=v5.0.AssemblyAttributes.cs
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/DisneyStreamPlusGIT/v16/TestStore/0/testlog.manifest
+/.vs/DisneyStreamPlusGIT/v16/TestStore/0/000.testlog
