--- a/.gitignore
+++ b/.gitignore
@@ -1906,3 +1906,4 @@
 /DisneyHomePageApi/bin/x86/Release/DisneyHomePageApi.pri
 /DisneyHomePageApi/bin/x86/Release/DisneyHomePageApi.pdb
 /DisneyHomePageApi/bin/x86/Release/DisneyHomePageApi.dll
+/DisneyHomePageApi/obj/x86/Release/DisneyHomePageApi.csproj.AssemblyReference.cache
