--- a/DisneyStreamingPlus/DisneyStreamingPlus.csproj
+++ b/DisneyStreamingPlus/DisneyStreamingPlus.csproj
@@ -134,6 +134,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\ImageNotFoundError.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
