--- a/DisneyStreamingPlus/DisneyStreamingPlus.csproj
+++ b/DisneyStreamingPlus/DisneyStreamingPlus.csproj
@@ -116,6 +116,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Model\GroupInfoList.cs" />
     <Compile Include="Model\Row.cs" />
     <Compile Include="Model\StreamingCatalog.cs" />
     <Compile Include="NotifyTaskCompletion.cs" />
